# Inlamning_AI

./: .gitignore  CMakeLists.txt  README.md  contactbook.cpp  contactbook.h  main.cpp  prompt.txt
